--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I'm a web developer extraordinaire with years of experience.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Contact via social media, the contact form below or at <i>firstname(dot)lastname(at)jorer.net</i></p>
+                    <p>Contact via social media, the contact form below or at <i>firstname(dot)lastname(at)jorer.net</i>. Also available as Jorer@IRCnet.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#contact" class="btn btn-lg btn-outline">
