--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,8 @@
                     <p>I'm a web developer extraordinaire with years of experience.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Contact via social media, the contact form below or at <i>firstname(dot)lastname(at)jorer.net</i>. Also available as Jorer@IRCnet.</p>
+                    <p>Contact me via social media, contact form or email at <i>firstname(dot)lastname(at)jorer.net</i>.</p>
+                    <p>Also available as Jorer@IRCnet.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#contact" class="btn btn-lg btn-outline">
